Fix layout problem

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,8 +3,8 @@
   position: relative;
   &__logo-box {
     position: absolute;
-    top: 2rem;
-    left: 2rem;
+    top: 0.25rem;
+    left: 3rem;
   }
 
   &__logo {
